--- a/src/components/FontStager/index.css
+++ b/src/components/FontStager/index.css
@@ -33,7 +33,7 @@ html, body {
   font-family: sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 /*
